Landing ang palceholder overlapping in login resolved

--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -25,13 +25,11 @@
     background-color: #ffffff;
   }
 
-  header.masthead[_ngcontent-c1]{
+  header.masthead{
     background-color: #72d5a4;
   }
 
-  body{
-    background-color: #fbfbfb;
-  }
+
 
 
 
@@ -56,7 +54,7 @@
   
   header.masthead {
     position: relative;
-    background-color: #343a40;
+    background-color: #72d5a4;
     /*background: url("../img/bg-masthead.jpg") no-repeat center center;*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
