--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -83,9 +83,9 @@ button{
         pointer-events: none;
         left: 5px;
         top: 10px;
-        transition: 0.2s ease all;
+        /* transition: 0.2s ease all;
         -moz-transition: 0.2s ease all;
-        -webkit-transition: 0.2s ease all;
+        -webkit-transition: 0.2s ease all; */
     }
 
     .md-input .bar:before {
@@ -105,8 +105,8 @@ button{
         pointer-events: none;
         opacity: 0.5;
     }
-    .md-input .md-form-control:focus ~ label, .md-input .md-form-control:valid ~ label {
-    top: -15px;
+    .md-input .md-form-control:focus ~ label{
+    /* top: -15px; */
     font-size: 14px;
     color: rgba(0, 0, 0, 0.5);
     outline:none;
